--- a/src/components/Letters/Letters.css
+++ b/src/components/Letters/Letters.css
@@ -11,27 +11,11 @@
 .letters__list {
   width: 100%;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(13, 1fr);
   grid-template-rows: auto;
-  column-gap: 10px;
-  row-gap: 3vh;
+  column-gap: 3vw;
+  row-gap: 3vw;
 
   color: aliceblue;
   border: 1px solid red;
-}
-
-.letter__unit {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: 60px;
-
-  min-height: 36vh;
-
-  border: 1px solid green;
-  border-radius: 15px;
-  box-sizing: border-box;
-  flex-grow: 1;
-
 }
