--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,5 +1,64 @@
 .card {
-  border: 1px solid red;
   margin: 1vw;
   padding: 1vw;
+  border-radius: 1vw;
+  background-color: rgb(45, 45, 45);
+  box-sizing: border-box;
+}
+
+.card__title {
+  font-size: 2vw;
+  font-weight: bold;
+}
+
+.card__wordcount {
+  font-size: 2vw;
+  color: rgb(255, 111, 111);
+}
+
+.card__wordcount-text {
+  font-size: 1.5vw;
+  opacity: 0.8;
+}
+
+@media (max-width: 750px) {
+  .card__title {
+    font-size: 3vw;
+  }
+
+  .card__wordcount-text {
+    font-size: 2vw;
+  }
+
+  .card__wordcount {
+    font-size: 3vw;
+  }
+}
+
+@media (max-width: 550px) {
+  .card__title {
+    font-size: 4vw;
+  }
+
+  .card__wordcount-text {
+    font-size: 3vw;
+  }
+
+  .card__wordcount {
+    font-size: 4vw;
+  }
+}
+
+@media (max-width: 420px) {
+  .card__title {
+    font-size: 5vw;
+  }
+
+  .card__wordcount-text {
+    font-size: 4vw;
+  }
+
+  .card__wordcount {
+    font-size: 5vw;
+  }
 }
