--- a/src/components/Letter/Letter.css
+++ b/src/components/Letter/Letter.css
@@ -5,3 +5,22 @@
   align-items: center;
   justify-content: center;
 }
+
+.letter__text {
+  width: 100%;
+  font-size: 6vw;
+  text-align: center;
+  background-color: rgb(48, 48, 48);
+  border-radius: 1vw;
+}
+
+.letter__text:hover {
+  color: rgb(255, 173, 173);
+}
+
+@media (max-width: 450px) and (max-aspect-ratio: 1/1) {
+  .letter__text {
+    font-size: 10vw;
+  }
+}
+
