--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 @import url(./vendor/normalize.css);
+@import url(./fonts/fonts.css);
 
 html {
   scroll-behavior: smooth;
 }
 
 main {
-  padding: 5vh;
+  padding: 2vw;
   max-width: 100%;
   display: flex;
   flex-direction: column;
