--- a/src/components/Word/Word.css
+++ b/src/components/Word/Word.css
@@ -1,7 +1,7 @@
 .word {
   display: flex;
   flex-direction: column;
-  width: 72vw;
+  width: 79vw;
 }
 
 .word__termin {
@@ -12,7 +12,6 @@
 }
 
 .word__translate-section {
-  border: 1px solid green;
   display: flex;
   flex-direction: column;
   flex-grow: 1;
@@ -28,4 +27,24 @@
 
 .word__translate_visible {
   visibility: visible;
+}
+
+@media (max-width: 1200px) {
+  .word__termin {
+    font-size: 8vw;
+  }
+
+  .word__translate {
+    font-size: 6vw;
+  }
+}
+
+@media (max-width: 450px) {
+  .word__termin {
+    font-size: 10vw;
+  }
+
+  .word__translate {
+    font-size: 8vw;
+  }
 }
