--- a/src/components/PopupForLesson/PopupForLesson.css
+++ b/src/components/PopupForLesson/PopupForLesson.css
@@ -12,6 +12,13 @@
   justify-content: space-evenly;
   align-items: center;
   transition: opacity 0.3s ease;
+  padding: 3vw 0;
+}
+
+.popup-for-lesson__unit_options {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .popup-for-lesson__unit:hover {
